# Flask_NoteAppSite

./: db.py  main.py  models.py  pyproject.toml  requirements.txt
templates/: detail.html  index.html  note.html  tag.html
